--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <style>
       body {
-        background-image: url('img/bg.jpg');
+        background-image: url('./bg.jpg');
       }
       h3{
         background-color: yellow;
@@ -15,6 +15,6 @@
   </head>
   <body>
     <h3>개똥지빠귀 새</h3>
-    <img src='img/bird.jpg'>
+    <img src='./bird.jpg'>
   </body>
 </html>
