--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <style>
       body {
-        background-image: url('./bg.jpg');
+        background-image: url('./forest.jpg');
       }
       h3{
         background-color: yellow;
